// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Active City render correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[Function]}
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;

exports[`Should City render correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item false"
    href="#"
    onClick={[Function]}
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;
